# dash-tailwindcss-plugin

./: .gitignore  README-zh_CN.md  README.md  example_app.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: test.yml
dash_tailwindcss_plugin/: __init__.py  cli.py  plugin.py  utils.py
tests/: README-zh_CN.md  README.md  conftest.py  test_cli.py  test_dash_callbacks.py  test_dash_integration.py  test_dash_simple.py  test_online_theme.py  test_plugin.py  test_utils.py
